# jobs-tracker

./: .flake8  .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: format-lint.yml  main.yml
airflow/dags/: archive_applications_dag.py  clean_job_offers.py  collect_job_offers.py
backend/: .dockerignore  .zshrc  Dockerfile  Dockerfile.airflow  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
backend/app/: auth.py  database.py  models.py  routers.py  routers_legacy.py  utils.py  wait-for-db.sh
backend/app/llm/: utils.py
backend/app/migrations/: add_archived_field.py  decriptions.py
backend/app/routers/: __init__.py  applications.py  auth.py  job_offers.py  tasks.py  users.py
backend/app/services/: job_offers.py
backend/app/tasks/: archive_old_applications.py  clean_job_offers.py  job_offers_collectors.py  log_consumer.py
backend/app/tasks/tests/: test_duplicate_cleaning.py  test_job_crawler_wf.py
backend/crawl4ai_test/: crawler1.py
backend/job_crawler/: __init__.py  crawler1.py  job_results_test.json  test_crawler.py
backend/job_trackers/: README.md  pyproject.toml
backend/job_trackers/knowledge/: user_preference.txt
backend/job_trackers/src/job_trackers/: crew.py  main.py
backend/job_trackers/src/job_trackers/config/: agents.yaml  tasks.yaml
backend/job_trackers/src/job_trackers/tools/: custom_tool.py
backend/tests/: conftest.py  test_tasks.py  test_users.py
frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/applications/: layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/offers/: layout.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/applications/: ApplicationCard.tsx  ApplicationDetails.tsx  ApplicationNotes.tsx  EditApplicationModal.tsx  KanbanBoard.tsx  KanbanColumn.tsx  StatusSelect.tsx
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegistrationForm.tsx
frontend/src/components/dashboard/: ApplicationCard.tsx  ApplicationsTable.tsx  EditApplicationModal.tsx  NewApplicationModal.tsx  Pagination.tsx  PositionChart.tsx  StatusChart.tsx  StatusFilter.tsx  TabNavigation.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/contexts/: NotificationContext.tsx
frontend/src/lib/: activityTracker.ts  api.ts  auth.ts
frontend/src/types/: application.ts  tasks.ts
(+15 files in other folders)
